# siaod-tasks

./: .gitignore  CMakeLists.txt  README.md
lab1/: README.md  main.cpp  main2.cpp  report.docx
lab1/alt-BK/: 1a.cpp  1b.cpp  1c.cpp  2a.cpp  2b.cpp  2c.cpp  3a.cpp  Otchet.docx
lab1/alt-EL/: report.docx
lab2/: main.cpp  report.docx
lab2/alt-AL/: main.cpp
lab3/: main.cpp  main2.cpp  report.docx
lab4/: main.cpp  report.docx
lab5/: main.cpp  report.docx
lab6/: main.cpp  main10.cpp  main11.cpp  main2.cpp  main3.cpp  main4.cpp  main5.cpp  main6.cpp  main7.cpp  main8.cpp  main9.cpp  report.docx  report2.docx
lab7/: main.cpp  main2.cpp  report.docx
