cmake_minimum_required(VERSION 3.22)
project(siaod_tasks)

set(CMAKE_CXX_STANDARD 14)

add_executable(siaod_tasks
        lab6/main11.cpp)

#add_executable(siaod_tasks
#        lab1/alt-BK/1a.cpp
#        lab1/alt-BK/1b.cpp
#        lab1/alt-BK/1c.cpp
#        lab1/alt-BK/2a.cpp
#        lab1/alt-BK/2b.cpp
#        lab1/alt-BK/2c.cpp
#        lab1/alt-BK/3a.cpp
#        lab1/alt-BK/Otchet.docx
#        lab1/alt-BK/Otchet.pdf
#        lab1/alt-EL/report.docx
#        lab1/alt-EL/report.pdf
#        lab1/main.cpp
#        lab1/main2.cpp
#        lab1/README.md
#        lab1/report.docx
#        lab1/report.pdf
#        lab1/task-text.pdf
#        .gitattributes
#        .gitignore
#        LICENSE
#        README.md)
